[package]
name = "bevy-wasm-ball-shooter"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.release]
codegen-units = 1
opt-level = 'z'
lto = true

[dependencies]
bevy = "0.11.0"
bevy_pkv = { git = "https://github.com/idanarye/bevy_pkv.git", branch = "upgrade-to-bevy-0.11", features = ["bevy"] }
bevy_rapier2d = { version = "0.22.0" }
fastrand = "2.0.0"
hexx = "0.9.0"

# [features]
# default = ["fast-compile"]
# fast-compile = ["bevy/dynamic_linking"]
# cargo build --release --no-default-features