[package]
name = "bevy-wasm-ball-shooter"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.release]
codegen-units = 1
opt-level = 'z'
lto = true

[profile.dev.package."*"]
codegen-units = 1

[dependencies]
bevy = "0.11.0"
bevy_pkv = { version = "0.8.0" }
bevy_xpbd_2d = "0.2.0"
fastrand = "2.0.0"
hexx = "0.10.0"

# [features]
# default = ["fast-compile"]
# fast-compile = ["bevy/dynamic_linking"]
# cargo build --release --no-default-features